<resources>
    <string name="app_name">booze buddy</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_ride_the_bus">ride the bus</string>
    <string name="rideTheBus">Ride the Bus</string>
    <string name="rideTheBusDesc">• Requires a combination of luck and logic in order to not get completely wasted.</string>
    <string name="rideTheBusPlayers">• 2 or more players</string>
    <string name="rideTheBusMaterials">• Deck of cards</string>
    <string name="rideTheBusInstructionsLine1">• Assign one player as dealer; the rest of the players should arrange themselves in a circle or around a table</string>
    <string name="rideTheBusInstructionsLine2">• Dealer asks each player a different question for each round </string>
    <string name="rideTheBusInstructionsLine3">• Once the player makes a guess, the dealer flips the next card</string>
    <string name="rideTheBusInstructionsLine4">• Correct guesses mean the player gives away drinks. Incorrect guesses mean player takes drinks.</string>
    <string name="rideTheBusRound1">ROUND 1</string>
    <string name="rideTheBusRound2">ROUND 2</string>
    <string name="rideTheBusRound3">ROUND 3</string>
    <string name="rideTheBusRound4">ROUND 4</string>
    <string name="rideTheBusRound5">ROUND 5</string>
    <string name="rideTheBusPyramid">PYRAMID</string>
    <string name="rideTheBusRideBus">RIDE THE BUS</string>
    <string name="rideTheBusQ1">Dealer: Ask each player \"Red or Black?\"</string>
<<<<<<< HEAD
    <string name="rideTheBusQ2">Dealer: Ask each player "Higher or Lower?"</string>
    <string name="rideTheBusQ3">Dealer: Ask each player "Between or Outside?"</string>
    <string name="rideTheBusQ4">Dealer: Ask each player "Pick a suit?"</string>
    <string name="rideTheBusQ5">Dealer: Ask each player "Pick a card?"</string>
=======
    <string name="rideTheBusQ2">Dealer: Ask each player \"Higher or Lower?\"</string>
    <string name="rideTheBusQ3">Dealer: Ask each player \"Between or Outside?\"</string>
    <string name="rideTheBusQ4">Dealer: Ask each player \"Pick a suit?\"</string>
    <string name="rideTheBusQ5">Dealer: Ask each player \"Pick a card? (Disregard suit)\"</string>
>>>>>>> 64c3de1a9a7592644b7bf4b675a756109eed373e
    <string name="rideTheBusDrinks1Correct">If correct, player gives 1 drink.</string>
    <string name="rideTheBusDrinks1Incorrect">If incorrect, player takes 1 drink.</string>
    <string name="rideTheBusDrinks2Correct">If correct, player gives 2 drinks.</string>
    <string name="rideTheBusDrinks2Incorrect">If incorrect, player takes 2 drinks.</string>
    <string name="rideTheBusDrinks3Correct">If correct, player gives 3 drinks.</string>
    <string name="rideTheBusDrinks3Incorrect">If incorrect, player takes 3 drinks.</string>
    <string name="rideTheBusDrinks4Correct">If correct, player gives 4 drinks.</string>
    <string name="rideTheBusDrinks4Incorrect">If incorrect, player takes 4 drinks.</string>
    <string name="rideTheBusDrinks5Correct">If correct, player gives 5 drinks.</string>
    <string name="rideTheBusDrinks5Incorrect">If incorrect, player takes 5 drinks.</string>
    <string name="rideTheBusPyramidMessage1">Dealer: Deal cards in pyramid arrangement shown above. Flip cards one at a time starting at the top row.</string>
    <string name="rideTheBusPyramidMessage2">Players: you may put down a card in your hand if it matches a card that has been flipped by the dealer. </string>
    <string name="rideTheBusPyramidMessage3">The number of drinks you may give out is proportional to the row (e.g. 1st row = 1 drink; 5th row = 5 drinks)</string>
    <string name="rideTheBusRideBusMessage1">The player with the most cards in their hand must now \"ride the bus\".</string>
    <string name="rideTheBusRideBusMessage2">Dealer: Place 5 cards down on the table. Flip them in front of the player who is about to ride the bus.</string>
    <string name="rideTheBusRideBusMessage3">Starting on the left, ask the player whether the next dealt card will be higher or lower. Next, deal a card on top of the first card.</string>
    <string name="rideTheBusRideBusMessage4">If the player was correct, they move on to the next card. If they were incorrect, they return to the first card and take 1 drink.</string>
    <string name="rideTheBusRideBusMessage5">Continue until the player correctly guesses all 5 cards in a row. If the player guesses incorrectly at any point, they must return to the start and take the number of drinks proportional the card they were on.</string>
    <string name="kingsCup">Kings Cup</string>
    <string name="kingsCupDesc">• Players drink and give drinks to other players based on cards drawn from a standard deck of cards.</string>
    <string name="kingsCupPlayers">• 2 or more players</string>
    <string name="kingsCupMaterialsLine1">• Deck of cards</string>
    <string name="kingsCupMaterialsLine2">• Large empty cup</string>
    <string name="kingsCupInstructionsLine1">• Shuffle the deck of cards and spread in a circle around an empty cup (called the "King's Cup")</string>
    <string name="kingsCupInstructionsLine2">• Each player then takes turns drawing a card and must follow the corresponding action</string>
    <string name="fingers">Fingers</string>
    <string name="fingersDesc">• Jungle juice in the middle. Last man standing drinks.</string>
    <string name="fingersPlayers">• 3 or more players</string>
    <string name="fingersMaterialsLine1">• Empty cup</string>
    <string name="fingersStep1">Place an empty cup in the middle.</string>
    <string name="fingersStep2">Everyone pour in a small amount of your drink</string>
    <string name="fingersStep3">Everyone place one finger on the rim of the cup.</string>
    <string name="fingersStep4">On the count of 3, decide to either keep or remove your finger on the cup. At the same time, the first player will guess the number of fingers remaining on the cup.</string>
    <string name="fingersStep5">Player 1, if your guess was correct, you are now out! </string>
    <string name="fingersStep6">Repeat these steps for the next player. The last player remaining must drink the cup in the middle! </string>
    <string name="fingersInstructionsLine1">• Players pour some of their drink into the center cup at the beginning of each round</string>
    <string name="fingersInstructionsLine2">• Last player standing must drink entire cup</string>
    <string name="fingersInstructionsLine3">• Players are eliminated if they correctly guess number of fingers that will be touching cup</string>
    <string name="fingersInstructionsLine4">• At the same time, the first person must guess how many fingers will remain on the cup</string>
    <string name="getCrunk">Get Crunk</string>
    <string name="getCrunkDesc">A fun activity to enjoy by yourself or with friends.</string>
    <string name="getCrunkPlayers">1 or more players</string>
    <string name="getCrunkInstructions">Jk this is illegal...</string>
    <string name="title_activity_kings_cup">Kings Cup</string>
    <string name="title_activity_get_crunk">Get Crunk</string>
    <string name="title_activity_fingers">Fingers</string>
    <string name="kingsCupAceName">Waterfall</string>
    <string name="kingsCupAceRule">Start drinking; each player starts drinking at the same time as the person to their left. Player cannot stop until the player before them stops.</string>
    <string name="kingsCup2Name">You</string>
    <string name="kingsCup2Rule">Pick a player to take a drink.</string>
    <string name="kingsCup3Name">Me</string>
    <string name="kingsCup3Rule">You take a drink.</string>
    <string name="kingsCup4Name">Whores</string>
    <string name="kingsCup4Rule">All females must take a drink.</string>
    <string name="kingsCup5Name">Thumb Master</string>
    <string name="kingsCup5Rule">Put your thumb on the table in a sneaky manner and the last person who puts their thumb on the table must drink.</string>
    <string name="kingsCup6Name">Dicks</string>
    <string name="kingsCup6Rule">All males must take a drink.</string>
    <string name="kingsCup7Name">Heaven</string>
    <string name="kingsCup7Rule">Everyone must raise their hand/finger and point to the sky. The last person to do so must take a drink.</string>
    <string name="kingsCup8Name">Mate</string>
    <string name="kingsCup8Rule">Choose a person to be your mate. They drink when you drink for the rest of the game.</string>
    <string name="kingsCup9Name">Rhyme</string>
    <string name="kingsCup9Rule">Say a word; the person to your right has to say a rhyming word. Continue around the table until someone cannot think of a word -> this person must drink.</string>
    <string name="kingsCup10Name">Categories</string>
    <string name="kingsCup10Rule">Pick a category of things; the person to your right must come up with something that falls within that category. Continue around the table until someone cannot come up with anything -> this person must drink.</string>
    <string name="kingsCupJackName">Rule Master</string>
    <string name="kingsCupJackRule">Make a rule that will last the entire game. If broken, the violator must drink.</string>
    <string name="kingsCupQueenName">Question Master</string>
    <string name="kingsCupQueenRule">You are now the \"Question Master\" until the next Queen is drawn. Whenever a player answers one of your questions, they must take a drink.</string>
    <string name="kingsCupKingName">Kings Cup</string>
    <string name="kingsCupKingRule">Pour some of your drink into the Kings Cup. When the last king is drawn, the player must drink the entire cup.</string>
    <string name="title_activity_kings_cup_materials">KingsCupMaterials</string>
    <string name="title_activity_kings_cup_how_to_play">KingsCupHowToPlay</string>
    <string name="title_activity_ride_the_bus_instructions">RideTheBusInstructions</string>
    <string name="title_activity_get_crunk_instructions">GetCrunkInstructions</string>
    <string name="title_activity_fingers_instructions">FingersInstructions</string>
    <string name="title_activity_ride_the_bus_step1">RideTheBusStep1</string>
    <string name="title_activity_ride_the_bus_start">RideTheBusStart</string>
    <string name="title_activity_get_crunk_start">GetCrunkStart</string>
    <string name="title_activity_fingers_start">FingersStart</string>
    <string name="title_activity_kings_cup_start">KingsCupStart</string>
    <string name="title_activity_ride_the_bus_step2">RideTheBusStep2</string>
    <string name="title_activity_ride_the_bus_step3">RideTheBusStep3</string>
    <string name="title_activity_ride_the_bus_step4">RideTheBusStep4</string>
    <string name="title_activity_ride_the_bus_step5">RideTheBusStep5</string>
    <string name="title_activity_ride_the_bus_step6">RideTheBusStep6</string>
    <string name="title_activity_ride_the_bus_step7">RideTheBusStep7</string>
    <string name="title_activity_fingers_step2">FingersStep2</string>
    <string name="title_activity_fingers_step3">FingersStep3</string>
    <string name="title_activity_fingers_step4">FingersStep4</string>
    <string name="title_activity_fingers_step5">FingersStep5</string>
    <string name="title_activity_finger_step6">FingerStep6</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
