<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background2" >
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.justin.myapplication.RideTheBusStep7"
    tools:showIn="@layout/activity_ride_the_bus_step7">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="58dp"
        android:text="@string/rideTheBusRideBus"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/done"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rideTheBusRideBusMessage1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rideTheBusRideBusMessage2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rideTheBusRideBusMessage3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rideTheBusRideBusMessage4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rideTheBusRideBusMessage5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/next"
        android:layout_marginTop="20dp"
        android:onClick="goToHome"/>

</LinearLayout>
    </ScrollView>
    </LinearLayout>