<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.justin.myapplication.KingsCupStart"
    tools:showIn="@layout/activity_kings_cup_start">

    <ImageView
        android:id="@+id/kingsCupImageView1"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/waterfall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCupAceRule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView2"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/you"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup2Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView3"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/me"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup3Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView4"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/whores"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup4Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView5"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/thumbmaster"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup5Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView6"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/dicks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup6Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView7"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/heaven"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup7Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView8"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/mate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup8Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView9"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/rhyme"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup9Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView10"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/categories"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCup10Rule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView11"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/rulemaster"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCupJackRule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView12"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/rulemaster"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCupJackRule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView13"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/questionmaster"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCupQueenRule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/kingsCupImageView14"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:src="@drawable/kingcup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/kingsCupKingRule"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:typeface="sans"
        android:layout_gravity="center"/>

</LinearLayout>

</ScrollView>
